Bug 1476347: Fix accessibility for HTML dt/dd with a div as its parent. r=MarcoZ

It is conforming in HTML to use a div to group dt/dd elements.
Previously, we didn't create an accessible for dt/dd elements in this case.

MozReview-Commit-ID: 8GDDxU3RbLd